Mejorado el formulario de permisos de roles.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -160,7 +160,7 @@
     "barcode": "Codi de barres",
     "bcc": "CCO",
     "become-sponsor": "Fes-te patrocinador",
-    "benefit-3-parties": "benefit-3-parties",
+    "benefit-3-parties": "benefici-3-partides",
     "big": "Gran",
     "billing": "Facturació",
     "billing-address": "Adreça de facturació",
@@ -593,7 +593,7 @@
     "es-tax-regime-one-stop-shop-ioss": "règim fiscal de guichet únic IOSS",
     "es-tax-regime-one-stop-shop-oss": "règim fiscal de guichet únic OSS",
     "es-tax-regime-simplified": "Règim simplificat",
-    "es-tax-regime-special-retail-traders": "règim fiscal especial para minoristes",
+    "es-tax-regime-special-retail-traders": "règim fiscal especial per a minoristes",
     "es-tax-regime-special-small-business": "règim fiscal especial per a petites empreses",
     "es-tax-regime-surcharge": "Recàrrec d'equivalència",
     "es-tax-regime-telecom": "Règims especials aplicables als serveis de telecomunicacions, de radiodifusió o de televisió i als prestats per via electrònica",
@@ -670,7 +670,7 @@
     "fixed-value": "Valor fix",
     "flag": "Bandera",
     "folder-not-writable": "No es pot escriure sobre la carpeta d'FacturaScripts.",
-    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
+    "folders-not-writable": "No es pot escriure sobre les carpetes de FacturaScripts: %folders%",
     "font": "Font",
     "font-size": "Mida font",
     "footer": "Peu de pàgina",
@@ -997,7 +997,7 @@
     "meta-description": "FacturaScripts és un programari de facturació i comptabilitat per a pimes. Es tracta de programari lliure sota la llicència GNU\/LGPL.",
     "method-payment": "Mètode de pagament",
     "mime-type": "Mime Type",
-    "min-fs-version": "Versión min. Core",
+    "min-fs-version": "Versió min. Core",
     "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Mínim import amb CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínim import sense CIF\/NIF",
@@ -1073,7 +1073,7 @@
     "no-reference": "Sense referència",
     "no-selected-item": "Cap element seleccionat",
     "no-stock": "No controlar stock",
-    "no-updates-now": "No hay actualizaciones en este momento",
+    "no-updates-now": "No hi ha actualitzacions en aquest moment",
     "non-editable-accounting-entry": "Assentament no editable",
     "non-editable-columns": "Columnes no editables: %columns%",
     "non-editable-document": "Document no editable",
@@ -1113,6 +1113,7 @@
     "only-closed": "Solament tancats",
     "only-insert": "Només afegir",
     "only-owner-data": "Mostrar només registres de l'usuari",
+    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
     "only-pending": "Només Pendents",
     "only-suspended": "Només suspès",
     "open": "Obrir",
@@ -1121,7 +1122,7 @@
     "opened": "Obert",
     "opening-acounting-completed": "Obertura d'exercici correcta",
     "opening-operation": "Obertura",
-    "operating-system": "Sistema Operativo",
+    "operating-system": "Sistema Operatiu",
     "operation": "Operació",
     "operation-export": "Operació d'exportació",
     "operator": "Operador",
@@ -1198,8 +1199,8 @@
     "phones": "Telèfons",
     "php-extension-needed": "Es requereix l'extensió %extension% a la configuració de PHP",
     "php-extension-not-found": "No tens l'extensió %extension% de PHP instal·lada.",
-    "php-extensions": "Extensiones PHP",
-    "php-extensions-required": "Extensiones PHP requeridas",
+    "php-extensions": "Extensions PHP",
+    "php-extensions-required": "Extensions PHP requerides",
     "php-support-end": "El suport per a PHP %current% acabarà aviat. Si us plau, actualitza PHP a la versió %min% o superior.",
     "php-version-too-new": "Es recomana utilitzar una versió de PHP entre %min_version% i %max_version%. Actualment tens la %version%",
     "physical-stock": "Estoc físic",
@@ -1225,7 +1226,7 @@
     "plugin-update": "Actualització del plugin %pluginName% a la versió %version%",
     "plugins": "Plugins",
     "plugins-p": "Els plugins permeten afegir noves funcions.  Activa els que necessitis ara, o fes-ho des del menú administrador.",
-    "plugins-required": "Plugins requeridos",
+    "plugins-required": "Plugins requerits",
     "points": "punts",
     "points-of-interest": "Punts d'interès",
     "port": "Port",
@@ -1439,7 +1440,7 @@
     "serierb": "Sèrie RB",
     "series": "Sèries",
     "server": "Servidor",
-    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-accepts-filesize": "Mida màx. de pujada d'arxius",
     "server-software": "Programari del servidor",
     "service": "Servei",
     "services": "Serveis",
@@ -1530,7 +1531,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Èxit",
-    "successive-tract": "successive-tract",
+    "successive-tract": "tracte consecutiu",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "La suma dels nets de les línies d'IVA ha de ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma dels totals de l'IVA de les línies d'IVA ha de ser: %lineTotalTax%",
@@ -1689,8 +1690,8 @@
     "updater": "Actualitzador",
     "updates-available": "Actualitzacions disponibles",
     "updates-available-p": "Hi ha actualitzacions disponibles de FacturaScripts. Per favor, feu clic a l'actualitzador i descarregueu la nova versió. Les actualitzacions corrigen fallos i añaden noves funcions.",
-    "updates-beta-warning": "Actualizaciones beta activadas",
-    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
+    "updates-beta-warning": "Actualitzacions beta activades",
+    "updates-beta-warning-p": "⚠️ Té activades les actualitzacions beta. Aquestes actualitzacions no han estat provades i només es recomanen en instal·lacions de prova.",
     "updating-attached-relations": "Actualitzant comptadors d'arxius adjunts",
     "upload-file": "Pujar arxiu",
     "uploaded-at": "Pujat en",
@@ -1760,7 +1761,7 @@
     "wizard": "Wizard",
     "wizard-p": "Empleni aquest formulari sobre el seu negoci per a acabar la configuració.",
     "wizard-plugins": "Un plugin és un complement que afegeix noves funcionalitats. Selecciona els plugins que vulguis activar immediatament, o fes-ho més tard des del panell de control.",
-    "work-certification": "Certificación",
+    "work-certification": "Certificació",
     "work-events": "Esdeveniments de treball",
     "working-hours": "Horari de treball",
     "works": "Feines",
@@ -1774,7 +1775,7 @@
     "years": "Anys",
     "yes": "Sí",
     "yesterday": "Ahir",
-    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
+    "you-can-sort-images": "Pots ordenar les imatges arrossegant-les",
     "you-cant-delete-primary-variant": "No pots eliminar la variant principal del producte",
     "you-sent-a-audio": "Vas enviar un àudio",
     "you-sent-a-document": "Vas enviar un document",
