--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1084,7 +1084,7 @@
     "not-enough-stock": "No hay suficiente stock de %reference%",
     "not-passed-integrity-check": "Algunos archivos no han pasado la verificación de integridad ... <br\/>Puedes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtener más detalles aquí<\/a>.",
     "not-public": "Neveřejné",
-    "not-registered": "No registrada",
+    "not-registered": "Není registrována",
     "not-sent": "Neposlané",
     "not-stored-content": "Obsah není uložen",
     "not-valid-email": "Email %email% no válido",
@@ -1113,6 +1113,7 @@
     "only-closed": "Solamente cerrados",
     "only-insert": "Sólo añadir",
     "only-owner-data": "Mostrar solamente registros del usuario",
+    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
     "only-pending": "Sólo Pendientes",
     "only-suspended": "Solamente suspendidos",
     "open": "Abrir",
@@ -1676,7 +1677,7 @@
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagado",
     "unsafe-file": "Nesecure archivo",
-    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
+    "unsafe-file-p": "Z bezpečnostních důvodů bráníme stahování některých typů souborů, jako je tento: %file%",
     "until-accounting-entry": "Hasta asiento",
     "until-date": "Hasta",
     "until-subaccount": "Hasta subcuenta",
