--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -91,7 +91,7 @@
     "allow-sale-without-stock": "Verkauf ohne Lager zulassen",
     "allow-sale-without-stock-n": "Verkauf ohne Lagerbestand für neue Produkte zulassen",
     "allow-update": "Aktualisierung zulassen",
-    "already-installed": "Ya instalado",
+    "already-installed": "Bereits installiert",
     "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Immer an die Unternehmens-E-Mail",
     "amount": "Menge",
@@ -228,7 +228,7 @@
     "center": "Mitte",
     "certificate": "Zertifikat",
     "change": "Veränderung",
-    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-password-online-warning": "Wenn dieses System online sein soll, sollten Sie das Passwort durch ein sicheres ersetzen.",
     "channel": "Kanal",
     "charge-date": "Belastungsdatum",
     "chart": "Grafik",
@@ -1113,6 +1113,7 @@
     "only-closed": "Nur geschlossen",
     "only-insert": "Nur hinzufügen",
     "only-owner-data": "Nur Benutzerdaten anzeigen",
+    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
     "only-pending": "Nur ausstehend",
     "only-suspended": "Nur ausgesetzt",
     "open": "öffnen",
@@ -1439,7 +1440,7 @@
     "serierb": "Serie RB",
     "series": "Serie",
     "server": "Server:",
-    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-accepts-filesize": "Maximale Dateigröße für Uploads",
     "server-software": "Server-Software",
     "service": "Dienstleistung",
     "services": "Dienstleistungen",
@@ -1725,7 +1726,7 @@
     "vat-regularization": "MwSt Regulierung",
     "vehicle": "Fahrzeug",
     "verified": "geprüft",
-    "verify": "Verificar",
+    "verify": "Überprüfen",
     "version": "Version",
     "video": "Video",
     "vies-check-success": "Die Nummer '%vat-number%' ist im VIES-System registriert",
