--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -91,7 +91,7 @@
     "allow-sale-without-stock": "Allow sale without stock",
     "allow-sale-without-stock-n": "Allow out-of-stock sale on new products",
     "allow-update": "Allow update",
-    "already-installed": "Ya instalado",
+    "already-installed": "Already installed",
     "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Always to the company email",
     "amount": "Amount",
@@ -160,7 +160,7 @@
     "barcode": "Barcode",
     "bcc": "BCC",
     "become-sponsor": "Become a sponsor",
-    "benefit-3-parties": "benefit-3-parties",
+    "benefit-3-parties": "Benefit to 3 parties",
     "big": "Big",
     "billing": "Billing",
     "billing-address": "Billing address",
@@ -573,7 +573,7 @@
     "error-write-cert": "Error writing certificate",
     "errors": "Mistakes",
     "es_EC": "Spanish (Ecuador)",
-    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-14": "Tax exception art. 14",
     "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "Spain: exception by article 20 of the VAT Law",
     "es-tax-exception-e2": "Spain: exception by article 21 of the VAT Law",
@@ -590,11 +590,11 @@
     "es-tax-regime-general": "General Regime",
     "es-tax-regime-gold": "Special regime for investment gold",
     "es-tax-regime-group-entities": "Special regime of the group of entities",
-    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-ioss": "One Stop Shop IOSS tax regime",
     "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Simplified Regime",
-    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
-    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
+    "es-tax-regime-special-retail-traders": "Special retail traders tax regime",
+    "es-tax-regime-special-small-business": "Special small business tax regime",
     "es-tax-regime-surcharge": "Equivalence surcharge",
     "es-tax-regime-telecom": "Special regimes applicable to telecommunications, radio broadcasting or television services and those provided electronically",
     "es-tax-regime-travel": "Special scheme for travel agents",
@@ -670,7 +670,7 @@
     "fixed-value": "Fixed value",
     "flag": "Flag",
     "folder-not-writable": "You can not write to the FacturaScripts folder.",
-    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
+    "folders-not-writable": "Cannot write to the FacturaScripts folders: %folders%",
     "font": "Font",
     "font-size": "Font size",
     "footer": "Footer",
@@ -820,7 +820,7 @@
     "invalid-number": "Invalid number: %number%",
     "invalid-request": "Invalid request",
     "invalid-token": "Invalid token.",
-    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
+    "invalid-token-p": "The access token for the file %file% is invalid or has expired",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
     "invalid-web": "Invalid web address: %web%",
     "invoice": "Invoice",
@@ -997,7 +997,7 @@
     "meta-description": "FacturaScripts is a billing and accounting software for SMEs. It is free software under the GNU\/LGPL license.",
     "method-payment": "Method of payment",
     "mime-type": "Mime Type",
-    "min-fs-version": "Versión min. Core",
+    "min-fs-version": "Min. Core version",
     "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Minimum amount with CIF\/NIF",
     "minimum-amount-without-cifnif": "Minimum amount without CIF\/NIF",
@@ -1113,6 +1113,7 @@
     "only-closed": "Only closed",
     "only-insert": "Sólo añadir",
     "only-owner-data": "Show only user records",
+    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
     "only-pending": "Only Pending",
     "only-suspended": "Only suspended",
     "open": "Open",
@@ -1121,9 +1122,9 @@
     "opened": "Opened",
     "opening-acounting-completed": "Opening acounting completed",
     "opening-operation": "Opening",
-    "operating-system": "Sistema Operativo",
+    "operating-system": "Operating System",
     "operation": "Operation",
-    "operation-export": "Operación exportación",
+    "operation-export": "Export operation",
     "operator": "Operator",
     "option": "Option",
     "optional": "optional",
@@ -1199,7 +1200,7 @@
     "php-extension-needed": "The extension %extension% is required in the PHP configuration",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-extensions": "Extensiones PHP",
-    "php-extensions-required": "Extensiones PHP requeridas",
+    "php-extensions-required": "Required PHP extensions",
     "php-support-end": "Support for PHP %current% will end soon. Please update PHP to version %min% or higher.",
     "php-version-too-new": "It is recommended to use a PHP version between %min_version% and %max_version%. You currently have %version%.",
     "physical-stock": "Physical stock",
@@ -1676,7 +1677,7 @@
     "unlock-entry": "Unlock",
     "unpaid": "Unpaid",
     "unsafe-file": "Unsafe file.",
-    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
+    "unsafe-file-p": "For security reasons, we prevent downloads of certain file types, such as this one: %file%",
     "until-accounting-entry": "Until entry",
     "until-date": "Until date",
     "until-subaccount": "Until subaccount",
