--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1113,6 +1113,7 @@
     "only-closed": "Itxita daudenak bakarrik",
     "only-insert": "Gehitu bakarrik",
     "only-owner-data": "Erabiltzaileen erregistroak bakarrik erakutsi",
+    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
     "only-pending": "Falta direnak bakarrik",
     "only-suspended": "Baliogabetuak bakarrik",
     "open": "Ireki",
@@ -1123,7 +1124,7 @@
     "opening-operation": "Irekitzea",
     "operating-system": "Sistema Operativo",
     "operation": "Operazioa",
-    "operation-export": "Operación exportación",
+    "operation-export": "Esportazio operazioa",
     "operator": "Operadorea",
     "option": "Aukera",
     "optional": "aukerakoa",
