--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -581,7 +581,7 @@
     "es-tax-exception-e4": "Espagne: exception pour les articles 23 et 24 de la loi sur la TVA",
     "es-tax-exception-e5": "Espagne: exception pour l'article 25 de la loi sur la TVA",
     "es-tax-exception-e6": "Espagne: exception pour une autre raison",
-    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-location-rules": "règles d'exception fiscales espagnoles",
     "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Régime spécial de l'agriculture, de l'élevage et de la pêche",
     "es-tax-regime-cash-criteria": "Critère de caisse",
@@ -926,7 +926,7 @@
     "list": "Liste",
     "load-def-acc-plan": "Charger le plan comptable par défaut",
     "loading-controller": "Chargement du contrôleur: '%controllerName%'",
-    "local-business-rental": "Alquiler locales",
+    "local-business-rental": "Location de locaux",
     "location": "Localisation",
     "lock-accounting": "Verrouiller la comptabilité",
     "lock-entry": "Verrouiller l'entrée",
@@ -1113,6 +1113,7 @@
     "only-closed": "Clôturé seulement",
     "only-insert": "Ajouter seulement",
     "only-owner-data": "Montrer uniquement les enregistrements de l'utilisateur",
+    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
     "only-pending": "En attente seulement",
     "only-suspended": "Suspendu seulement",
     "open": "Ouvrir",
@@ -1530,7 +1531,7 @@
     "subtotal": "Sous-total",
     "subtract": "Soustraire",
     "success": "Succès",
-    "successive-tract": "successive-tract",
+    "successive-tract": "Trajet successif",
     "sum": "Somme",
     "sum-netos-line-tax-must-be": "La somme du net des lignes de TVA devrait être: %lineNet%",
     "sum-total-line-tax-must-be": "La somme des totaux de TVA des lignes de TVA devrait être: %lineTotalTax%",
