--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -91,7 +91,7 @@
     "allow-sale-without-stock": "Permitir venda sen stock",
     "allow-sale-without-stock-n": "Permitir venta sen stock nos novos produtos",
     "allow-update": "Permitir modificar",
-    "already-installed": "Ya instalado",
+    "already-installed": "Xa instalado",
     "already-installed-p": "O programa xa está instalado",
     "always-to-company-email": "Sempre ó email da empresa",
     "amount": "Cantidade",
@@ -392,7 +392,7 @@
     "data-source": "Datos de orixe",
     "database": "Base de datos",
     "database-error": "Erro ó conectar á base de datos",
-    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-pc": "🖥️ Se o programa está instalado no teu PC, probablemente se che esqueceu activar MySQL ou ten problemas para activarse.",
     "database-error-server": "🌎 se o programa está instalado nun servidor ou hosting, probablemente cambiaste o usuario ou contrasinal da base de datos, ou alcanzaches algún límite de uso do hosting.",
     "database-name-must-be-lowercase": "O nome da base de datos debe ser en minúsculas",
     "date": "Data",
@@ -670,7 +670,7 @@
     "fixed-value": "Valor fixo",
     "flag": "Bandeira",
     "folder-not-writable": "Non pode escribir sobre cartafol FacturaScripts.",
-    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
+    "folders-not-writable": "Non se pode escribir sobre as carpetas de FacturaScripts: %folders%",
     "font": "Fonte",
     "font-size": "Tamaño de fonte",
     "footer": "Pe de páxina",
@@ -926,7 +926,7 @@
     "list": "Listaxe",
     "load-def-acc-plan": "Cargar plan contable predeterminado",
     "loading-controller": "Cargando o controlador: '%controllerName%'",
-    "local-business-rental": "Alquiler locales",
+    "local-business-rental": "Alugueiro locais",
     "location": "Localización",
     "lock-accounting": "Bloquear contabilidade",
     "lock-entry": "Bloquear asento",
@@ -1073,7 +1073,7 @@
     "no-reference": "Sen referencia",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "Non controlar stock",
-    "no-updates-now": "No hay actualizaciones en este momento",
+    "no-updates-now": "Non hai actualizacións neste momento",
     "non-editable-accounting-entry": "Asento non editable",
     "non-editable-columns": "Non se permite editar as columnas",
     "non-editable-document": "Documento non editable",
@@ -1113,6 +1113,7 @@
     "only-closed": "Só pechados",
     "only-insert": "Só engadir",
     "only-owner-data": "Amosar soamente rexistros do usuario",
+    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
     "only-pending": "Só pendentes",
     "only-suspended": "soamente suspendidos",
     "open": "Abrir",
@@ -1199,7 +1200,7 @@
     "php-extension-needed": "Requirese a extensión %extension% na configuración de PHP",
     "php-extension-not-found": "Non tes a extensión %extension% de PHP instalada.",
     "php-extensions": "Extensiones PHP",
-    "php-extensions-required": "Extensiones PHP requeridas",
+    "php-extensions-required": "Extensións PHP requiridas",
     "php-support-end": "O soporte para PHP %current% rematará pronto. Por favor, actualiza PHP á versión %min% ou superior.",
     "php-version-too-new": "Recoméndase usar unha versión de PHP entre a %min_version% e a %max_version%. Actualmente tes a %version%",
     "physical-stock": "Accións físicas",
@@ -1675,7 +1676,7 @@
     "unlink-install-ok": "Instalación borrada do rexistro corretamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagado",
-    "unsafe-file": "Archivo no seguro",
+    "unsafe-file": "Arquivo non seguro",
     "unsafe-file-p": "Por motivos de seguridade impedimos as descargas dalgúns tipos de arquivos, como este: %file%",
     "until-accounting-entry": "Ata asento",
     "until-date": "Ata (data)",
