--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -581,7 +581,7 @@
     "es-tax-exception-e4": "Spagna: eccezione per gli articoli 23 e 24 della legge sull'IVA",
     "es-tax-exception-e5": "Spagna: eccezione per l'articolo 25 della legge sull'IVA",
     "es-tax-exception-e6": "Spagna: eccezione per altro motivo",
-    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-location-rules": "regole di eccezione fiscale per posizione",
     "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
     "es-tax-regime-cash-criteria": "Criterio di cassa",
@@ -1113,6 +1113,7 @@
     "only-closed": "Solo chiusi",
     "only-insert": "solo inserire",
     "only-owner-data": "Mostra solo i registri dell'utente",
+    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
     "only-pending": "Solo in sospeso",
     "only-suspended": "Solo sospesi",
     "open": "apri",
