--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -393,7 +393,7 @@
     "database": "Baza danych",
     "database-error": "Błąd połączenia z bazą danych",
     "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
-    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
+    "database-error-server": "🌎 jeśli program jest zainstalowany na serwerze lub w hostingu, prawdopodobnie zmieniłeś użytkownika lub hasło bazy danych albo osiągnąłeś jakiś limit użytkowania hostingu.",
     "database-name-must-be-lowercase": "Nazwa bazy danych musi być pisana małymi literami",
     "date": "Data",
     "date-in": "Data wejścia",
@@ -819,7 +819,7 @@
     "invalid-iso-code": "Nieprawidłowy kod ISO '%iso-code%'",
     "invalid-number": "Nieprawidłowy numer: %number%",
     "invalid-request": "Nieprawidłowe żądanie",
-    "invalid-token": "Token no válido",
+    "invalid-token": "Token nie jest ważny",
     "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Nieprawidłowe uprawnienie: %permission%. Dostępne uprawnienia to: dostęp, usuwanie, eksport, import, aktualizacja i tylko-dane-właściciela.",
     "invalid-web": "Nieprawidłowy adres sieciowy: %web%",
@@ -1113,6 +1113,7 @@
     "only-closed": "Tylko zamknięte",
     "only-insert": "Tylko dodaj",
     "only-owner-data": "Wyświetl tylko rekordy właściciela",
+    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
     "only-pending": "Tylko oczekujące",
     "only-suspended": "Tylko zawieszeni",
     "open": "Otwórz",
@@ -1649,7 +1650,7 @@
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-code": "Kod dwóch czynników",
-    "two-factor-enabled": "Aktywuj uwierzytelnianie w 2 krokach",
+    "two-factor-enabled": "Aktywuj uwierzytelnianie dwuskładnikowe",
     "type": "Typ",
     "type-alert": "Typ alarmu",
     "type-critical": "Typ krytyczny",
