--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -91,7 +91,7 @@
     "allow-sale-without-stock": "Permitir venda sem estoque",
     "allow-sale-without-stock-n": "Permitir venda sem estoque nos novos produtos",
     "allow-update": "Permitir MODIFICAR",
-    "already-installed": "Ya instalado",
+    "already-installed": "Já instalado",
     "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Sempre para o e-mail da empresa",
     "amount": "Valor",
@@ -1113,6 +1113,7 @@
     "only-closed": "Apenas fechado",
     "only-insert": "somente-inserir",
     "only-owner-data": "Mostrar apenas os registos do usuário",
+    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
     "only-pending": "Só pendentes",
     "only-suspended": "Somente suspensos",
     "open": "Abrir",
@@ -1199,7 +1200,7 @@
     "php-extension-needed": "É necessária a extensão %extension% na configuração do PHP",
     "php-extension-not-found": "Você não tem a extensão %extension% do PHP instalada.",
     "php-extensions": "Extensiones PHP",
-    "php-extensions-required": "Extensiones PHP requeridas",
+    "php-extensions-required": "Extensões PHP requeridas",
     "php-support-end": "p",
     "php-version-too-new": "Recomenda-se usar uma versão do PHP entre %min_version% e %max_version%. Atualmente, tem a %version%",
     "physical-stock": "Estoque físico",
