--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1113,6 +1113,7 @@
     "only-closed": "Apenas fechado",
     "only-insert": "Somente adicionar",
     "only-owner-data": "Mostrar apenas os registos do usuário",
+    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
     "only-pending": "Só pendentes",
     "only-suspended": "Apenas suspensos",
     "open": "Abrir",
@@ -1690,7 +1691,7 @@
     "updates-available": "Atualizações disponíveis",
     "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As actualizações corrigem falhas e adicionam novas funcionalidades.",
     "updates-beta-warning": "Actualizaciones beta activadas",
-    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
+    "updates-beta-warning-p": "⚠️ Tem atualizações beta ativadas. Essas atualizações não foram testadas e são recomendadas apenas em instalações de teste.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Carregado em",
