--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -573,8 +573,8 @@
     "error-write-cert": "Error en escriure el certificat",
     "errors": "Erros",
     "es_EC": "Espanyol (Ecuador)",
-    "es-tax-exception-art-14": "es-tax-exception-art-14",
-    "es-tax-exception-art-7": "es-tax-exception-art-7",
+    "es-tax-exception-art-14": "excepció fiscal art. 14",
+    "es-tax-exception-art-7": "excepció fiscal art. 7",
     "es-tax-exception-e1": "Espanya: excepció per l'article 20 de la Llei de l'IVA",
     "es-tax-exception-e2": "Espanya: excepció per l'article 21 de la Llei de l'IVA",
     "es-tax-exception-e3": "Espanya: excepció per l'article 22 de la Llei de l'IVA",
@@ -1113,6 +1113,7 @@
     "only-closed": "Només tancats",
     "only-insert": "Sólo añadir",
     "only-owner-data": "only-owner-data",
+    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
     "only-pending": "only-pending",
     "only-suspended": "Només els suspesos",
     "open": "Obri",
@@ -1648,7 +1649,7 @@
     "two-factor-auth-enable": "Activar autenticació en 2 passos",
     "two-factor-auth-enabled": "Autenticació en 2 passos activada",
     "two-factor-auth-p": "Configura l'app Google Authenticator utilitzant el QR, introdueix aquí el codi i prem verificar per completar el procés d'activació.",
-    "two-factor-code": "Código de doble factor",
+    "two-factor-code": "Codi de doble factor",
     "two-factor-enabled": "Activar autenticació en 2 passos",
     "type": "Tipus",
     "type-alert": "Tipo alerta",
@@ -1676,7 +1677,7 @@
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagat",
     "unsafe-file": "Arxiu no segur",
-    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
+    "unsafe-file-p": "Per motius de seguretat, impedim les descàrregues d'alguns tipus d'arxius, com aquest: %file%",
     "until-accounting-entry": "Fins a assentament",
     "until-date": "Fins a",
     "until-subaccount": "Fins a subcompte",
@@ -1689,7 +1690,7 @@
     "updater": "Actualitzador",
     "updates-available": "Actualitzacions disponibles",
     "updates-available-p": "Hi ha actualitzacions disponibles de FacturaScripts. Si us plau, feu clic a l'actualitzador i descarregueu la nova versió. Les actualitzacions corregeixen fallades i afegeixen noves funcions.",
-    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning": "Actualitzacions beta activades",
     "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
     "updating-attached-relations": "Actualitzant comptadors d'arxius adjunts",
     "upload-file": "Pujar arxiu",
